Fix editor center alignment for button
With the Gutenberg plugin v8.3.0 installed and active it creates slightly different markup so the preexisting styles no longer center align the button. This fixes that and improves frontend style.

--- a/extensions/blocks/calendly/view.scss
+++ b/extensions/blocks/calendly/view.scss
@@ -11,6 +11,6 @@
 	top: 50px;
 }
 
-.wp-block-jetpack-calendly.aligncenter .wp-block-jetpack-button {
+.wp-block-jetpack-calendly.aligncenter {
 	text-align: center;
 }
